--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <!-- JS -->
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/notifications.js"></script>
-  <script src="js/render.js"></script>
+  <script src="js/main.js"></script>
 
 </head>
 
